--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -10,7 +10,7 @@
       <ul class="list-group my-3">
         <li class="list-group-item"
           *ngFor="let brand of brands"
-          [class.active]="brand.id === this.brandIdSelected"
+          [class.active]="brand.id === this.shopParams.brandId"
           [value]="brand.id"
           (click)="onBrandSelected(brand.id)"
           >
@@ -21,7 +21,7 @@
       <ul class="list-group my-3">
         <li class="list-group-item"
           *ngFor="let productType of productTypes"
-          [class.active]="productType.id === this.productTypeSelected"
+          [class.active]="productType.id === this.shopParams.productTypeId"
           [value]="productType.id"
           (click)="onProductTypeSelected(productType.id)"
           >
@@ -32,9 +32,13 @@
 
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
-        <header>
-          <span>Showing <strong>10</strong> of <strong>16</strong> Results</span>
-        </header>
+
+        <app-paging-header
+           [totalCount]="totalCount"
+           [pageSize]="this.shopParams.pageSize"
+           [pageNumber]="this.shopParams.pageNumber" >
+        </app-paging-header>
+
         <div class="form-inline mt-2">
           <input class="form-control mr-2" style="width: 300px;" placeholder="Search" type="text">
           <button class="btn btn-outline-primary my-2">Search</button>
@@ -46,6 +50,9 @@
         <div class="col-4 mb-4" *ngFor="let item of products">
           <app-product-item [product]="item"></app-product-item>
         </div>
+      </div>
+      <div class="d-flex justify-content-center" *ngIf="this.totalCount && this.totalCount > 0">
+        <app-pager [pageSize]="shopParams.pageSize" [totalCount]="totalCount" (pageChanged)="onPageChanged($event)"></app-pager>
       </div>
     </section>
   </div>
