--- a/client/src/app/core/server-error/server-error.component.html
+++ b/client/src/app/core/server-error/server-error.component.html
@@ -1,3 +1,21 @@
 <div class="container" mt-5>
-  <h1>Internal server error</h1>
+  <h4>Internal server error - refreshing the page will make the exception disappear</h4>
+
+  <ng-container *ngIf="error">
+    <h5 class="text-danger">Error: {{error.message}}</h5>
+    <p class="font-weight-bold">Note: if you are seeing this then angular is probably not responsible</p>
+    <p>what to do next?</p>
+    <ol>
+      <li>Open chrome dev tools</li>
+      <li>Inspect the network tab</li>
+      <li>Check the failing request</li>
+      <li>Examine this request URL</li>
+      <li>Reproduce the error in postman</li>
+    </ol>
+
+    <p>Following is the stack trace</p>
+
+    <code class="mt-5" style="background-color: whitesmoke;">{{error.details}}</code>
+  </ng-container>
+
 </div>
