--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,6 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <section class="col-3">
+      <ng-container *ngIf="productTypes && brands">
       <h5 class="text-warning ml-3">Sort</h5>
       <select name="sort" id="sort" class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
         <option *ngFor="let sort of sortOptions" [value]="sort.value">{{sort.name}}</option>
@@ -8,26 +9,20 @@
 
       <h5 class="text-warning ml-3">Brands</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item"
-          *ngFor="let brand of brands"
-          [class.active]="brand.id === this.shopParams.brandId"
-          [value]="brand.id"
-          (click)="onBrandSelected(brand.id)"
-          >
+        <li class="list-group-item" *ngFor="let brand of brands" [class.active]="brand.id === this.shopParams.brandId"
+          [value]="brand.id" (click)="onBrandSelected(brand.id)">
           {{brand.name}}
         </li>
       </ul>
       <h5 class="text-warning ml-3">Types</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item"
-          *ngFor="let productType of productTypes"
-          [class.active]="productType.id === this.shopParams.productTypeId"
-          [value]="productType.id"
-          (click)="onProductTypeSelected(productType.id)"
-          >
+        <li class="list-group-item" *ngFor="let productType of productTypes"
+          [class.active]="productType.id === this.shopParams.productTypeId" [value]="productType.id"
+          (click)="onProductTypeSelected(productType.id)">
           {{productType.name}}
         </li>
       </ul>
+    </ng-container>
     </section>
 
     <section class="col-9">
@@ -39,7 +34,7 @@
            [pageNumber]="this.shopParams.pageNumber" >
         </app-paging-header>
 
-        <div class="form-inline mt-2">
+        <div class="form-inline mt-2" *ngIf="products">
           <input (keyup.enter)="onSearch()" class="form-control mr-2" #search style="width: 300px;" placeholder="Search" type="text">
           <button class="btn btn-outline-primary my-2" (click)="onSearch()">Search</button>
           <button class="btn btn-outline-success ml-2 my-2" (click)="onReset()">Reset</button>
